sumo/tests/dfrouter/errors/testsuite.dfrouter
# Ordered list of tests in test suite. Add as appropriate


# Tests what happens if the net is not available
false_net

# Tests what happens if the output is not given
no_output

# Tests what happens if an unknown option is passed
unknown_option




